# binary-valentine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  binary_valentine.sln  common.props
binary-valentine-ui/: AboutWindow.qml  AnalysisPlanModelPopulator.cpp  AnalysisPlanModelPopulator.h  AnalysisPlanXmlSaver.cpp  AnalysisPlanXmlSaver.h  AnalysisProgress.cpp  AnalysisProgress.h  AnalysisRunner.cpp  AnalysisRunner.h  AnalyzedFileTracker.cpp  AnalyzedFileTracker.h  AppLabel.qml  BinaryValentineContext.cpp  BinaryValentineContext.h  CMakeLists.txt  CheckableButton.qml  Colors.qml  DescriptionLabel.qml  DynamicTabButton.qml  ExceptionFormatter.cpp  ExceptionFormatter.h  FileDropArea.qml  HeaderLabel.qml  HomeView.qml  ImmutableContext.cpp  ImmutableContext.h  InMemoryReportOutput.cpp  InMemoryReportOutput.h  Link.qml  Main.qml  ModelToAnalysisPlanConverter.cpp  ModelToAnalysisPlanConverter.h  OpenProjectDialog.qml  ProgressReport.cpp  ProgressReport.h  ProjectModel.cpp  ProjectModel.h  ProjectModelLoader.cpp  ProjectModelLoader.h  ProjectRootNode.cpp  (+38 more)
binary-valentine-ui/win32/: binary_valentine_ui.rc  manifest.manifest  resource.h
binary_valentine/: CMakeLists.txt  binary_valentine.vcxproj  binary_valentine.vcxproj.filters
binary_valentine/include/binary_valentine/: rule_class.h  version.h
binary_valentine/include/binary_valentine/analysis/: analysis_context.h  analysis_plan.h  analysis_plan_parse_helpers.h  analysis_plan_provider_interface.h  analysis_plan_runner.h  command_line_analysis_plan_provider.h  concurrent_analysis_executor.h  immutable_context.h  result_report_file.h  shared_context.h  xml_analysis_plan_provider.h
binary_valentine/include/binary_valentine/common/: xml_loader.h
binary_valentine/include/binary_valentine/core/: async_data_generator.h  async_data_generator_interface.h  async_value_provider.h  async_value_provider_interface.h  combined_data_generator.h  combined_data_generator_interface.h  combined_dependency_helper.h  combined_rule.h  combined_rule_interface.h  combined_value_helper.h  combined_value_provider.h  compile_time_string.h  core_error.h  data_generator.h  data_generator_helpers.h  data_generator_interface.h  data_generator_list.h  embedded_resource_loader_generator.h  embedded_resource_loader_interface.h  entity_stream_provider_interface.h  file_embedded_resource_loader.h  generic_data_generator_interface.h  hash_combine.h  inaccessible_subject_entity.h  localizable_error.h  overloaded.h  reflection.h  rule.h  rule_class.h  rule_class_mask.h  rule_detector_container.h  rule_detector_interface.h  rule_interface.h  rule_list.h  rule_selector.h  scoped_guard.h  shared_value_provider.h  subject_entity_interface.h  time_tracker.h  transparent_hash.h  (+8 more)
binary_valentine/include/binary_valentine/executable/: executable_extra_rule_detector.h  executable_rule_reports.h
binary_valentine/include/binary_valentine/file/: async_file.h  async_target_enumerator.h  file_entity.h  file_entity_stream_provider.h  file_loader.h
binary_valentine/include/binary_valentine/https/: https_request_helper.h
binary_valentine/include/binary_valentine/json/: json_printer.h
binary_valentine/include/binary_valentine/output/: configurable_result_report_factory.h  entity_in_memory_report_interface.h  exception_formatter.h  filtering_report_output.h  format_args_helper.h  in_memory_output_creator.h  in_memory_report.h  in_memory_report_creator_type.h  in_memory_report_output.h  internal_report_arg_names.h  internal_report_messages.h  issue_tracking_output.h  multiple_report_output.h  realtime_report_creator_type.h  result_report_interface.h  rule_report.h  rule_report_helper.h  terminal_output_creator.h  terminal_report_output.h  unformatted_common_output_report.h
binary_valentine/include/binary_valentine/pe/: pe_format_detector.h  pe_rule_reports.h
binary_valentine/include/binary_valentine/progress/: progress_report_interface.h  terminal_progress_report.h
binary_valentine/include/binary_valentine/resource/: en.h
binary_valentine/include/binary_valentine/string/: case_conv.h  embedded_resource_loader.h  embedded_resource_provider.h  encoding.h  resource_helper.h  (+3 more)
binary_valentine/src/: boost_deps.cpp
binary_valentine/src/analysis/: analysis_context.cpp  analysis_plan.cpp  analysis_plan_parse_helpers.cpp  analysis_plan_runner.cpp  command_line_analysis_plan_provider.cpp  concurrent_analysis_executor.cpp  immutable_context.cpp  result_report_file.cpp  shared_context.cpp  xml_analysis_plan_provider.cpp
binary_valentine/src/common/: xml_loader.cpp
binary_valentine/src/core/: async_value_provider.cpp  combined_dependency_helper.cpp  combined_value_provider.cpp  core_error.cpp  data_generator_list.cpp  embedded_resource_loader_generator.cpp  file_embedded_resource_loader.cpp  rule_detector_container.cpp  rule_list.cpp  rule_selector.cpp  shared_value_provider.cpp  subject_entity_interface.cpp  time_tracker.cpp  user_error.cpp  value_cache.cpp  value_provider.cpp
binary_valentine/src/executable/: executable_extra_rule_detector.cpp
binary_valentine/src/file/: async_file.cpp  async_target_enumerator.cpp  file_entity_stream_provider.cpp  file_loader.cpp
binary_valentine/src/https/: https_request_helper.cpp
binary_valentine/src/output/: configurable_result_report_factory.cpp  exception_formatter.cpp  filtering_report_output.cpp  format_args_helper.cpp  in_memory_report_output.cpp  issue_tracking_output.cpp  multiple_report_output.cpp  terminal_report_output.cpp  unformatted_common_output_report.cpp
binary_valentine/src/pe/: pe_format_detector.cpp
binary_valentine/src/progress/: progress_report_interface.cpp  terminal_progress_report.cpp
binary_valentine/src/string/: case_conv.cpp  embedded_resource_loader.cpp  encoding.cpp  resource_helper.cpp  rule_report_resource_helper.cpp
binary_valentine_cmd/: CMakeLists.txt  binary_valentine_cmd.vcxproj  binary_valentine_cmd.vcxproj.filters
binary_valentine_cmd/src/: main.cpp
binary_valentine_cmd/win32/: binary_valentine_cmd.rc  manifest.manifest  resource.h
data/: apisets.xml  (+6 more)
(+166 files in other folders)
